# Test_Unittest_pytest-cov

contacts-api/: pyproject.toml  requirements.txt
contacts-api/app/: auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  test_connection.py
contacts-api/app/tests/: test_auth.py  test_auth_routes.py  test_auth_service.py  test_config.py  test_crud.py  test_database.py  test_dependencies.py  test_main.py  test_models.py
contacts-api/source/: conf.py  index.rst
